creation of an endpoint of the total number of registered users, swagger
