# docs/swagger.json
@@ -677,6 +677,51 @@
         }
       }
     },
+    "/users/count": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get total number of registered users",
+        "operationId": "getUsersCount",
+        "description": "Returns the total number of registered users in the application",
+        "security": [],
+        "responses": {
+          "200": {
+            "description": "Successful operation, returns the total number of users",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully got total number of registered users!"
+                    },
+                    "data": {
+                      "type": "integer",
+                      "example": 76
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/water/day": {
       "post": {
         "tags": [
